syntax = "proto3";

package proto;

option go_package = "./proto;proto"; 

service UserService {
    rpc GetUserByID(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    int32 id = 1;
    string name = 2;
    string email = 3;
}
